Deploy new match messages and manual weather
